[gd_scene load_steps=2 format=3 uid="uid://bj6y8elpd2fp4"]

[ext_resource type="Script" path="res://TimeSetter.gd" id="1_b3w2l"]

[node name="TimeSetter" type="Control"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b3w2l")

[node name="StartTime" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 42.0
grow_vertical = 2
mouse_filter = 2

[node name="StartTime_label" type="Label" parent="StartTime"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartTime_btn" type="Button" parent="StartTime"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="EndTime" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="EndTime_label" type="Label" parent="EndTime"]
unique_name_in_owner = true
layout_mode = 2
text = "23:59"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTime_btn" type="Button" parent="EndTime"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="button_down" from="StartTime/StartTime_btn" to="." method="_on_start_time_btn_button_down"]
[connection signal="button_up" from="StartTime/StartTime_btn" to="." method="_on_start_time_btn_button_up"]
[connection signal="button_down" from="EndTime/EndTime_btn" to="." method="_on_end_time_btn_button_down"]
[connection signal="button_up" from="EndTime/EndTime_btn" to="." method="_on_end_time_btn_button_up"]
